--- a/ui/src/main/res/values/dimen.xml
+++ b/ui/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="base_padding">16dp</dimen>
     <dimen name="image_size">100dp</dimen>
+    <dimen name="view_min_height">120dp</dimen>
 </resources>
