--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3a3d3b</color>
     <color name="colorPrimaryDark">#222423</color>
-    <color name="colorAccent">#5c7a66</color>
+    <color name="colorAccent">#cfd4d1</color>
     <color name="color_white">#fff</color>
 </resources>
 
