--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:background">@color/colorPrimaryDark</item>
-        <item name="android:textColor">@color/color_white</item>
-        <item name="android:textColorHint">@color/color_white</item>
-        <item name="android:textColorPrimary">@color/color_white</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -32,4 +28,10 @@
     <style name="TextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:textColor">@color/color_white</item>
     </style>
+
+    <style name="ToolbarTheme" parent="Widget.MaterialComponents.Toolbar">
+        <item name="android:textColor">@color/color_white</item>
+        <item name="background">@color/color_white</item>
+    </style>
+
 </resources>
